--- a/client/src/components/Styles/styles.css
+++ b/client/src/components/Styles/styles.css
@@ -1044,11 +1044,26 @@ section.container.user-account > form:first-child{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
 section.container.user-account > form:first-child button{
   width: 100%;
   border-radius: 5px;
+}
+
+section.container.user-account > form:first-child input[type="file"] + label{
+  background-color: var(--color-tertiary);
+  width: 100%;
+  text-align: center;
+  color: var(--color-white);
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+section.container.user-account > form:first-child input[type="file"] + label:hover{
+  background-color:rgb(189, 148, 127);
 }
 section.container.user-account > form:last-child {
   display: flex;
